# nodeguard

./: .gitignore  .pre-commit-hooks.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml  scan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  missed_detection.md
.github/workflows/: ci.yml  release.yml
docs/: retrospective-analysis.md  threat-model.md
pytest-cache-files-diawr9lu/v/cache/: nodeids
signatures/: README.md  known_malware.jsonl  malicious_urls.txt  top_pypi_packages.txt
src/nodeguard/: __init__.py  cli.py  config.py  report.py  scanner.py
src/nodeguard/data/: __init__.py  signatures.py
src/nodeguard/layers/: __init__.py  base.py  layer_00_hash.py  layer_01_bloom_url.py  layer_02_patterns.py  layer_03_ast.py  layer_04_typosquatting.py
src/nodesafe/: __init__.py  cli.py  config.py  report.py  scanner.py
src/nodesafe/data/: signatures.py
src/nodesafe/layers/: __init__.py  _features.py  _obfuscation.py  base.py  layer_00_hash.py  layer_01_bloom_url.py  layer_02_patterns.py  layer_03_ast.py  layer_04_typosquatting.py  layer_05_heuristic.py
src/nodesafe/workflow/: __init__.py  extractors.py  models.py  parser.py  scanner.py
src/nodesafe/workflow/analyzers/: __init__.py  wl1_urls.py  wl2_patterns.py
tests/: conftest.py  test_cli.py  test_layer_00_hash.py  test_layer_01_bloom_url.py  test_layer_02_patterns.py  test_layer_03_ast.py  test_layer_04_typosquatting.py  test_layer_05_heuristic.py  test_obfuscation.py  test_scanner.py  test_workflow.py
tests/_signatures/: known_malware.jsonl  malicious_urls.txt  patterns.json
tests/fixtures/benign/simple_math_node/: __init__.py  nodes.py
tests/fixtures/benign/workflows/: sdxl_basic.json
tests/fixtures/malicious/synthetic_ast_loader/: __init__.py
tests/fixtures/malicious/synthetic_credential_pattern/: __init__.py
tests/fixtures/malicious/synthetic_obfuscation/: __init__.py
tests/fixtures/malicious/synthetic_pattern_chain/: __init__.py
tests/fixtures/malicious/synthetic_typosquatting/: __init__.py  requirements.txt
tests/fixtures/malicious/workflows/: synthetic_workflow_malicious.json
