[project]
name = "nodesafe"
version = "0.5.1"
description = "Security scanner for ComfyUI custom nodes and node-based workflow plugins"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "nodesafe contributors" }]
requires-python = ">=3.10"
keywords = ["security", "scanner", "comfyui", "diffusion", "custom-nodes", "malware-detection"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyahocorasick>=2.0",
    "rapidfuzz>=3.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# Optional extras — install on demand to keep the footprint small for advanced layers
ast = ["libcst>=1.0"]                                                        # Layer 3 enhanced
ml = ["scikit-learn>=1.4", "xgboost>=2.0"]                                   # Layer 5
anomaly = ["scikit-learn>=1.4", "torch>=2.0"]                                # Layer 6
similarity = ["transformers>=4.40", "faiss-cpu>=1.7", "sentence-transformers>=3.0"]  # Layer 7
llm = ["litellm>=1.50", "ollama>=0.3"]                                       # Layer 8
semgrep = ["semgrep>=1.50"]                                                  # Optional Layer 3 backend

# Convenience bundles (rapidfuzz is core, so no typosquatting extras needed)
full = ["nodesafe[ast,ml,anomaly,similarity,llm,semgrep]"]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4", "pyright>=1.1"]

[project.scripts]
nodesafe = "nodesafe.cli:main"

[project.urls]
Homepage = "https://github.com/neuregex/nodesafe"
Repository = "https://github.com/neuregex/nodesafe"
Issues = "https://github.com/neuregex/nodesafe/issues"
Documentation = "https://github.com/neuregex/nodesafe/blob/main/README.md"
Changelog = "https://github.com/neuregex/nodesafe/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nodesafe"]

[tool.hatch.build.targets.wheel.force-include]
"signatures/known_malware.jsonl" = "nodesafe/_bundled_signatures/known_malware.jsonl"
"signatures/malicious_urls.txt" = "nodesafe/_bundled_signatures/malicious_urls.txt"
"signatures/patterns.json" = "nodesafe/_bundled_signatures/patterns.json"
"signatures/top_pypi_packages.txt" = "nodesafe/_bundled_signatures/top_pypi_packages.txt"

[tool.hatch.build.targets.sdist]
include = [
    "src/nodesafe",
    "signatures",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # ruff-specific
    "SIM",    # simplifications
    "S",      # bandit security
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert usage (we use it in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]            # No security checks in tests
"tests/fixtures/**" = ["F", "E", "W", "B", "S", "RUF"]  # Fixtures can contain anything
# The obfuscation module and its tests deliberately reference Cyrillic
# characters to demonstrate and detect homoglyph attacks.
"src/nodesafe/layers/_obfuscation.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_obfuscation.py" = ["RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/nodesafe"]
omit = ["tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["tests/fixtures"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportMissingTypeStubs = "none"
